package A02_ARA0101_PPJ_CG.aula02.FactoryMethod.exemplo01;

public interface PedidoItem {
    Produto getProduto();
    int getQuantidade();
    double getPreco();
}
